--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "rules": {
         "no-restricted-globals": "off",
         "no-plusplus": "off",
+        "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
         "import/extensions": "off",
         "no-console": "off",
