--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-airbnb-base": "^14",
     "eslint-plugin-import": "^2",
     "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "npm-run-all": "^4",
     "rimraf": "^3",
     "ts-jest": "^26.5.5",
